--- a/Avalonia/AvaloniaApp.Desktop/AvaloniaApp.Desktop.csproj
+++ b/Avalonia/AvaloniaApp.Desktop/AvaloniaApp.Desktop.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.2" />
   </ItemGroup>
 
   <ItemGroup>
