--- a/Avalonia/AvaloniaApp/AvaloniaApp.csproj
+++ b/Avalonia/AvaloniaApp/AvaloniaApp.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.17763.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
@@ -22,6 +22,15 @@
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Fenrir.Mathematics">
+      <HintPath>external\Fenrir.Mathematics.dll</HintPath>
+    </Reference>
+    <Reference Include="FenrirEngine">
+      <HintPath>external\FenrirEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
